# whatsapp-claude

./: .env.example  .gitignore  README.md  SUMMARY.md  pyproject.toml
agents/: __init__.py  conversational_agent.py
agents/invoice_agent/: __init__.py  agent.py  infrastructure.py  intent_classifier.py  orchestrator.py
channels/: __init__.py
channels/whatsapp/: __init__.py  adapter.py  simulator.py
database/: __init__.py  invoice_data.py  models.py  session.py  store.py
llm_router/: __init__.py  agent_prompt.md  prompt.md  providers.py  router.py  schemas.py
scheduler/: __init__.py  tasks.py
server/: __init__.py  app.py  config.py  run.py  whatsapp_client.py
state_machine/: __init__.py  invoice_state.py  models.py
tests/: __init__.py  conftest.py  test_agent.py  test_claude_integration.py  test_database.py  test_e2e_invoice_flow.py  test_harness.py  test_invoice_data.py  test_production_hardening.py  test_provider_integration.py  test_router.py  test_scheduler.py  test_server.py  test_state_machine.py  test_tools.py  test_whatsapp_adapter.py  test_whatsapp_production.py
tools/: __init__.py  base.py  invoice_tools.py
